[jvm-execution] show VM option completion variants if key partially entered (IDEA-318049)
GitOrigin-RevId: 9e2174e3727b39024b97e63671fe19ecf9eeeaa1